# network-monitor

./: CMakeLists.txt  conanfile.py  conanprofile.toml
inc/network-monitor/: file-downloader.h  transport-network.h  websocket-client.h
src/: file-downloader.cpp  main.cpp  transport-network.cpp  websocket-client.cpp
tests/: boost-mock.h  file-downloader.cpp  transport-network.cpp  websocket-client.cpp
